# JurisFlow

./: .env.example  .gitignore  agent.py  pyproject.toml
agents/: agent.py  agent_prev.py
core/: calculo_trabalhista.py  financeiro_bcb.py  lookup_data.py
models/: schemas.py  schemas_prev.py
prompts/: extrator_previdenciario.md  extrator_trabalhista.md
tools/: pdf_reader.py
